[tool.poetry]
name = "nwc-safer"
version = "0.3.0"
description = "NWC-SAFer CLI tool simplifying NetCDF data extraction and conversion of NWC-SAF products."
authors = ["dfotiou <fotioudimitris93@vodafone.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/fotioudim/NWC-SAFer"
keywords = ["nwc-saf", "netcdf", "typer", "python", "poetry", "watchdog"]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
packages = [{include = "nwc_safer"}]

[tool.poetry.scripts]
nwc-safer = "nwc_safer.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
watchdog = "^2.3.1"
xarray = "^2023.2.0"
netcdf4 = "^1.6.3"
dask = "^2023.3.1"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
